--- a/Scripts/Analyses/timeseries_analyses.Rmd
+++ b/Scripts/Analyses/timeseries_analyses.Rmd
@@ -398,10 +398,6 @@ remove(pivot_df_trial)
 library(parallel)
 numCores<- detectCores() - 2 #12
 
-
-
-
-
 library(furrr)
 library(future)
 
@@ -438,31 +434,238 @@ Sys.time(); for ( i in 1:length(split_unique_cell)){
 ```
 
 
+##############################################2. Model fitting
+As per Pelisse et al., 2024, I have decided to fit four statistical models for 
+each pixel and then use AIC for model selection. The four types of models are-
+no intercept, linear, quadratic and step 
 
+In the chunk below I write the code for above models and trial with one pixel
 
-
-##############################################7. Regression type analyses ie not doing any sort of decomposition/differencing for removal of seasonality. All data is included (irrespective of seasons) and let regression type of analyses get the trend
-
-#####(i)- No trend lm- this is from Berdugo et al., 2022. This means that the result of the regression will be the mean of the anisoEVI values. It means that the model only fits an intercept at the mean without a slope (straight horizontal line across). 
-The point of doing this is to then compare other models to this model and proceed with model selection. 
 ```{r}
-#no_trend_coef_fun <- function(x) { 
-#  if (is.na(x[1])){ NA } 
-#  else { m = lm(x ~ 1); #no trend means, the resulting x will be the mean of all the time series NDVI i.e. i
-#  summary(m)$coefficients[1] 
-#  }}
+library(MuMIn)
 
-pivot_no_NA
-pivot_no_NA<- pivot_no_NA %>% separate_wider_delim(cols = name, delim = "_", names = c("Year","Month"))
-pivot_no_NA<- pivot_no_NA %>% mutate(Date= paste0(Year,"_", Month, "_01"))
-pivot_no_NA<- pivot_no_NA %>% mutate(Date= lubridate::as_date(Date))
+class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
+                                   interval_size = 0.5)
+  {
+  #Trajectory fitting
+  null_mod<- lm(Y ~ 1, data = dataset) ##1. No intercept
+  summary(null_mod) #significant pvalue next to intercept  means that the mean is significantly different from 0
+  nmrs_null<- sqrt(sum(summary(null_mod)$residuals^2)/length(dataset$trend))/sd(dataset$trend)
+  aic_null<- MuMIn::AICc(null_mod)
 
-#trial
-trial_point<- pivot_no_NA %>% dplyr::filter(PointID==2) %>% dplyr::select(value)
-m<- lm(trial_point$value~1)
-summary(m) #significant pvalue next to intercept only means that the mean is significantly different from 0
+  linear_mod<- lm(Y ~ X, data = dataset) ##2.linear
+  summary(linear_mod)
+  nmrs_lin<- sqrt(sum(summary(linear_mod)$residuals^2)/length(dataset$trend))/sd(dataset$trend)
+  aic_lin<- MuMIn::AICc(linear_mod)
 
-remove(m, trial_point)
+  orth_poly_mod<- lm(Y ~ poly(X,2, raw=F), data = trial_df) #raw=F means orthogonal polynomials are used
+  summary(orth_poly_mod)
+  nmrs_quad<- sqrt(sum(summary(orth_poly_mod)$residuals^2)/length(dataset$trend))/sd(dataset$trend)
+  aic_quad<- MuMIn::AICc(orth_poly_mod)
+
+  ## To get relevant values for quadratic output - Directly from Pellise et al., 2024 
+  ## https://github.com/matpelissie/abrupt_shifts_ecological_timeseries_classification/blob/main/R/functions_trajclass.R
+  
+  # After getting Y = gamma*chi + delta*X' + epsilon with orthogonal polynomial,
+  # we have to perform a variable change to obtain relevant values in the X interval 
+  # for first_order_coefficient, second_order_coefficient and intercept, 
+  # knowing that X'= alpha*X + beta and chi = eta*X'^2 + theta
+
+  gammab  <-  orth_poly_mod$coefficients[3]
+  delta  <-  orth_poly_mod$coefficients[2]
+  epsilon  <-  orth_poly_mod$coefficients[1]
+
+  alpha  <-  lm(orth_poly_mod$model[, 2][, 1] ~ X)$coef[2]
+  beta  <-  lm(orth_poly_mod$model[, 2][, 1] ~ X)$coef[1]
+
+  eta  <-  1/lm((orth_poly_mod$model[, 2][, 1])^2 ~
+                orth_poly_mod$model[, 2][, 2])$coef[2]
+  theta  <-  (-lm((orth_poly_mod$model[, 2][, 1])^2 ~
+                  orth_poly_mod$model[, 2][, 2])$coef[1])*eta
+
+  Y2 <- Y*(max(X)-min(X))/(max(Y)-min(Y)) 
+
+  # p2 and p3 are relevant when Y and X amplitudes are equivalent,in particular when 
+  # studying scaled-to-1 indices, Y and X amplitudes may be very different, so we 
+  # scaled the amplitudes to calculate p2 and p3
+
+  polynomial_orthonormal_basis <- lm(Y2~poly(X,2, raw=T))$coefficients
+
+  # Quadratic model output:
+  classification <-
+    data.frame(first_order_coefficient = (delta+2*beta*gammab*eta)*alpha,
+               first_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[2, 4],
+               second_order_coefficient = (alpha^2)*gammab*eta,
+               second_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[3, 4],
+               strd_error=summary(orth_poly_mod)$coefficients[2, 2],
+               intercept = epsilon+beta*delta+(beta^2)*gammab*eta+gammab*theta,
+               x_m = (X[length(X)]-X[1])/2+X[1],
+               # points of interest:
+               p1 = -(delta+2*beta*gammab*eta)/(2*alpha*gammab*eta),
+               p2 = (-polynomial_orthonormal_basis[2]+1)/
+                 (2*polynomial_orthonormal_basis[3]),
+               p3 = (-polynomial_orthonormal_basis[2]-1)/
+                 (2*polynomial_orthonormal_basis[3]),
+               aic = aic_quad,
+               nrmse = nmrs_quad)
+  
+  # Linear model output:
+  classification[2,] <-
+    data.frame(first_order_coefficient = delta*alpha,
+               first_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[2, 4],
+               second_order_coefficient = 0,
+               second_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[3, 4],
+               strd_error=summary(orth_poly_mod)$coefficients[2, 2],
+               intercept = epsilon+delta*beta,
+               x_m = (X[length(X)]-X[1])/2+X[1],
+               p1 = NA,
+               p2 = NA,
+               p3 = NA,
+               aic = aic_lin,
+               nrmse = nmrs_lin)
+
+  # No change model output:
+  classification[3,] <-
+    data.frame(first_order_coefficient = 0,
+               first_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[2, 4],
+               second_order_coefficient = 0,
+               second_order_pvalue =
+                 summary(orth_poly_mod)$coefficients[3, 4],
+               strd_error=summary(orth_poly_mod)$coefficients[2, 2],
+               intercept = null_mod$coefficients,
+               x_m = (X[length(X)]-X[1])/2+X[1],
+               p1 = NA,
+               p2 = NA,
+               p3 = NA,
+               aic = aic_null,
+               nrmse = nmrs_null)
+
+  # # Significance of coeeficients  
+  # if(summary(orth_poly_mod)$coefficients[3, 4] <= 0.05){
+  #   classification$best_model <- c("best", NA, NA) # quadratic model
+  # } else if(summary(orth_poly_mod)$coefficients[2, 4]<=0.05){
+  #   classification$best_model <- c(NA, "best", NA) # linear model
+  # } else {
+  #   classification$best_model <- c(NA, NA, "best") # no change model
+  # }
+
+  # Classification of each model fitted:
+  for (i in 1:3){
+
+    # Compute the derivative at xm-delta and at xm + delta with delta being
+    # half of the input interval size (its 25% of the time interval which is set as 0.5)
+      derivative <-
+        2*(classification$x_m[i] - (X[length(X)]-X[1])*(interval_size/2))*  
+        classification$second_order_coefficient[i] +
+        classification$first_order_coefficient[i]
+      derivative2 <-
+        2*(classification$x_m[i] + (X[length(X)]-X[1])*(interval_size/2))*
+        classification$second_order_coefficient[i] +
+        classification$first_order_coefficient[i]
+
+
+      if(sign(derivative) != sign(derivative2) | i==3){
+      # non consistent direction around x_m
+        classification$derivative[i]  <-  NA
+        classification$intercept_derivative[i]  <-  NA
+
+      } else {
+      # consistent direction around x_m
+        classification$derivative[i] <- mean(c(derivative, derivative2))
+        classification$intercept_derivative[i] <-
+          (classification$second_order_coefficient[i]*classification$x_m[i]^2+
+             classification$first_order_coefficient[i]*classification$x_m[i]+
+              classification$intercept[i]) -
+          classification$x_m[i]*classification$derivative[i]
+      }
+
+    # Compute the derivative of the curvature function to get acceleration:
+      classification$derivated_curvature[i] <-
+        -12*(classification$second_order_coefficient[i]^2)*
+        (2*classification$second_order_coefficient[i]*classification$x_m[i]+
+           classification$first_order_coefficient[i])*
+        (classification$second_order_coefficient[i]/
+           abs(classification$second_order_coefficient[i]))/
+        ((1+(2*classification$second_order_coefficient[i]*classification$x_m[i]+
+            classification$first_order_coefficient[i])^2)^(2.5))
+
+    # Keep derivated curvature even if not significant for polynomial fit:
+      if(classification$second_order_pvalue[i]>0.05 & i != 1){
+        classification$derivated_curvature[i] <- NA
+      }
+
+    # Classify the direction:
+      classification$direction[i] <- NA
+        classification$direction[i][which(
+          classification$derivative[i] > 0)] <- "increase"
+      classification$direction[i][which(
+        classification$derivative[i] < 0)] <- "decrease"
+      classification$direction[i][which(
+        is.na(classification$derivative[i]))] <- "stable"
+      classification$direction[i][which(
+        as.numeric(classification$first_order_pvalue[i])>0.05 &
+          as.numeric(classification$second_order_pvalue[i])>0.05)] <- "stable"
+
+    # Classify the acceleration:
+      classification$acceleration[i] <- NA
+        classification$acceleration[i][which(
+          classification$derivated_curvature[i] < 0)] <- "accelerated"
+      classification$acceleration[i][which(
+        classification$derivated_curvature[i] > 0)] <- "decelerated"
+      classification$acceleration[i][which(
+        classification$direction[i] == "stable" &
+          classification$second_order_coefficient[i] < 0)] <- "concave"
+      classification$acceleration[i][which(
+        classification$direction[i] == "stable" &
+          classification$second_order_coefficient[i] > 0)] <- "convex"
+      classification$acceleration[i][which(
+        is.na(classification$derivated_curvature[i]))] <- "constant"
+
+    # Give the final classification combining direction and acceleration:
+      classification$shape_class[i] <- paste(classification$direction[i],
+                                             classification$acceleration[i],
+                                             sep="_")
+    }  
+  linear.model.summary <- summary(linear_mod)
+
+  classification$linear_slope <- linear.model.summary$coefficients[2, 1]
+  classification$linear_slope_pvalue <- linear.model.summary$coefficients[2, 4]
+  classification$linear_intercept <- linear.model.summary$coefficients[1, 1]
+
+  classification$first_X_value <- X[1]
+  classification$last_X_value <- X[length(X)]
+
+  row.names(classification) <- c("Y_pol","Y_lin", "Y_nch")
+
+  return(classification)
+}
+
+
+
+```
+
+#Trial above classification function (null, linear, quadratic model)
+```{r}
+#Data input
+decomposed_dftrial<- read_rds(here("Outputs", "STL_Decomposition", "Split_datagroups", "stldecomposition331.rds"))
+head(decomposed_dftrial)
+
+trial_df<- decomposed_dftrial %>% filter(cell==1679729)
+head(trial_df)
+trial_df<- trial_df %>% dplyr::select(-c(og_anisoEVI, int_anisoEVI, seasonal, remainder))
+#trial_df<- trial_df %>% separate_wider_delim(cols = date, delim = "_", names = c("Year","Month"))
+#trial_df<- trial_df %>% mutate(Date= paste0(Year,"_", Month, "_01"))
+#trial_df<- trial_df %>% mutate(Date= lubridate::as_date(Date))
+trial_df<- trial_df %>% mutate(Months= 1:nrow(trial_df))
+plot(trial_df$trend, type= "l")
+
+tic(); x<- class_trajectory_mod(trial_df$trend, trial_df$Months, trial_df); toc()
+
 ```
 
 
@@ -470,14 +673,41 @@ remove(m, trial_point)
 ```{r}
 library(chngpt)
 
-pivot_no_NA
-trial_point<- pivot_no_NA %>% dplyr::filter(PointID==2) 
-trial_point<- trial_point %>% mutate(timestep= 1:dim(trial_point)[1])
+chng_fit<- chngpt::chngptm(formula.1=trend~1, 
+                      formula.2=~Months, 
+                      family="gaussian", data=trial_df,
+                      type="step", 
+                      var.type="bootstrap", weights=NULL)
 
-fit<- chngpt::chngptm(formula.1=value~1, formula.2=~timestep, family="gaussian", data=trial_point,
-type="step", var.type="bootstrap", weights=NULL)
-test<-chngpt.test(formula.null=value~1, formula.chngpt=~timestep, trial_point, type="step", family="gaussian")
+pred_chg <- data.frame(year = trial_df$Months,
+                         bp = chng_fit$best.fit$fitted.values)
 
+nrmse <- sqrt(sum(residuals(chng_fit)^2)/length(trial_df$trend))/sd(trial_df$trend)
+
+# Summarize chngt outputs in one line:
+chg_out <- data.frame(abbr = "chg",
+                        mtd = "chgnpt",
+                        n_brk = 1,
+                        loc_brk = chng_fit$chngpt,
+                        aic = MuMIn::AICc(chng_fit),
+                        trend = ifelse(pred_chg$bp[1] >
+                                         pred_chg$bp[length(pred_chg$bp)],
+                                       "decrease", "increase"),
+                        mag = pred_chg$bp[length(pred_chg$bp)] - pred_chg$bp[1],
+                        rel_chg =
+                          (pred_chg$bp[length(pred_chg$bp)] - pred_chg$bp[1]) /
+                          max(abs(pred_chg$bp[length(pred_chg$bp)]),abs(pred_chg$bp[1])),
+                        SDbef = trial_df %>%
+                          dplyr::filter(Months<=chng_fit$chngpt) %>%
+                          dplyr::pull(trend) %>%
+                          sd(),
+                        SDaft = trial_df %>%
+                          dplyr::filter(Months>=chng_fit$chngpt) %>%
+                          dplyr::pull(trend) %>%
+                          sd(),
+                        nrmse = nrmse
+  )
+  chg_out <- chg_out %>% mutate(abruptness = mag/((SDbef+SDaft)/2))
 
 ```
 
