--- a/Scripts/Analyses/timeseries_analyses.Rmd
+++ b/Scripts/Analyses/timeseries_analyses.Rmd
@@ -444,21 +444,19 @@ In the chunk below I write the code for above models and trial with one pixel
 ```{r}
 library(MuMIn)
 
-class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
-                                   interval_size = 0.5)
-  {
+class_trajectory_mod <- function (dataset = NULL, interval_size = 0.5) {
   #Trajectory fitting
-  null_mod<- lm(Y ~ 1, data = dataset) ##1. No intercept
+  null_mod<- lm(trend ~ 1, data = dataset) ##1. No intercept
   summary(null_mod) #significant pvalue next to intercept  means that the mean is significantly different from 0
   nmrs_null<- sqrt(sum(summary(null_mod)$residuals^2)/length(dataset$trend))/sd(dataset$trend)
   aic_null<- MuMIn::AICc(null_mod)
 
-  linear_mod<- lm(Y ~ X, data = dataset) ##2.linear
+  linear_mod<- lm(trend ~ Months, data = dataset) ##2.linear
   summary(linear_mod)
   nmrs_lin<- sqrt(sum(summary(linear_mod)$residuals^2)/length(dataset$trend))/sd(dataset$trend)
   aic_lin<- MuMIn::AICc(linear_mod)
 
-  orth_poly_mod<- lm(Y ~ poly(X,2, raw=F), data = trial_df) #raw=F means orthogonal polynomials are used
+  orth_poly_mod<- lm(trend ~ poly(Months,2, raw=F), data = dataset) #raw=F means orthogonal polynomials are used
   summary(orth_poly_mod)
   nmrs_quad<- sqrt(sum(summary(orth_poly_mod)$residuals^2)/length(dataset$trend))/sd(dataset$trend)
   aic_quad<- MuMIn::AICc(orth_poly_mod)
@@ -475,21 +473,21 @@ class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
   delta  <-  orth_poly_mod$coefficients[2]
   epsilon  <-  orth_poly_mod$coefficients[1]
 
-  alpha  <-  lm(orth_poly_mod$model[, 2][, 1] ~ X)$coef[2]
-  beta  <-  lm(orth_poly_mod$model[, 2][, 1] ~ X)$coef[1]
+  alpha  <-  lm(orth_poly_mod$model[, 2][, 1] ~ dataset$Months)$coef[2]
+  beta  <-  lm(orth_poly_mod$model[, 2][, 1] ~ dataset$Months)$coef[1]
 
   eta  <-  1/lm((orth_poly_mod$model[, 2][, 1])^2 ~
                 orth_poly_mod$model[, 2][, 2])$coef[2]
   theta  <-  (-lm((orth_poly_mod$model[, 2][, 1])^2 ~
                   orth_poly_mod$model[, 2][, 2])$coef[1])*eta
 
-  Y2 <- Y*(max(X)-min(X))/(max(Y)-min(Y)) 
+  Y2 <- dataset$trend*(max(dataset$Months)-min(dataset$Months))/(max(dataset$trend)-min(dataset$trend)) 
 
   # p2 and p3 are relevant when Y and X amplitudes are equivalent,in particular when 
   # studying scaled-to-1 indices, Y and X amplitudes may be very different, so we 
   # scaled the amplitudes to calculate p2 and p3
 
-  polynomial_orthonormal_basis <- lm(Y2~poly(X,2, raw=T))$coefficients
+  polynomial_orthonormal_basis <- lm(Y2~poly(dataset$Months,2, raw=T))$coefficients
 
   # Quadratic model output:
   classification <-
@@ -501,7 +499,7 @@ class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
                  summary(orth_poly_mod)$coefficients[3, 4],
                strd_error=summary(orth_poly_mod)$coefficients[2, 2],
                intercept = epsilon+beta*delta+(beta^2)*gammab*eta+gammab*theta,
-               x_m = (X[length(X)]-X[1])/2+X[1],
+               x_m = (dataset$Months[length(dataset$Months)]-dataset$Months[1])/2+dataset$Months[1],
                # points of interest:
                p1 = -(delta+2*beta*gammab*eta)/(2*alpha*gammab*eta),
                p2 = (-polynomial_orthonormal_basis[2]+1)/
@@ -527,7 +525,7 @@ class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
                  summary(orth_poly_mod)$coefficients[3, 4],
                strd_error=summary(orth_poly_mod)$coefficients[2, 2],
                intercept = epsilon+delta*beta,
-               x_m = (X[length(X)]-X[1])/2+X[1],
+               x_m = (dataset$Months[length(dataset$Months)]-dataset$Months[1])/2+dataset$Months[1],
                p1 = NA,
                p2 = NA,
                p3 = NA,
@@ -550,7 +548,7 @@ class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
                  summary(orth_poly_mod)$coefficients[3, 4],
                strd_error=summary(orth_poly_mod)$coefficients[2, 2],
                intercept = null_mod$coefficients,
-               x_m = (X[length(X)]-X[1])/2+X[1],
+               x_m = (dataset$Months[length(dataset$Months)]-dataset$Months[1])/2+dataset$Months[1],
                p1 = NA,
                p2 = NA,
                p3 = NA,
@@ -570,11 +568,11 @@ class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
     # Compute the derivative at xm-delta and at xm + delta with delta being
     # half of the input interval size (its 25% of the time interval which is set as 0.5)
       derivative <-
-        2*(classification$x_m[i] - (X[length(X)]-X[1])*(interval_size/2))*  
+        2*(classification$x_m[i] - (dataset$Months[length(dataset$Months)]-dataset$Months[1])*(interval_size/2))*  
         classification$second_order_coefficient[i] +
         classification$first_order_coefficient[i]
       derivative2 <-
-        2*(classification$x_m[i] + (X[length(X)]-X[1])*(interval_size/2))*
+        2*(classification$x_m[i] + (dataset$Months[length(dataset$Months)]-dataset$Months[1])*(interval_size/2))*
         classification$second_order_coefficient[i] +
         classification$first_order_coefficient[i]
 
@@ -649,7 +647,7 @@ class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
                       type="step",
                       var.type="bootstrap", weights=NULL)
 
-  pred_chg <- data.frame(timestep = X,
+  pred_chg <- data.frame(timestep = dataset$Months,
                          bp = chng_fit$best.fit$fitted.values)
 
   chng_nrmse <- sqrt(sum(residuals(chng_fit)^2)/length(dataset$trend))/sd(dataset$trend)
@@ -671,11 +669,12 @@ class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
                         dplyr::filter(Months>=chng_fit$chngpt) %>%
                         dplyr::pull(trend) %>%
                         sd()
-
-    
-  
   
   row.names(classification) <- c("Y_pol","Y_lin", "Y_nch", "Y_abpt")
+  
+  classification$cell <- unique(dataset$cell)
+  classification$x <- unique(dataset$x)
+  classification$y <- unique(dataset$y)
 
   return(classification)
 }
@@ -684,7 +683,7 @@ class_trajectory_mod <- function (Y = NULL, X = NULL, dataset = NULL,
 
 ```
 
-#Trial above classification function (null, linear, quadratic model, abrupt)
+Running across all points with parallelizing
 ```{r}
 #Data input
 decomposed_dftrial<- read_rds(here("Outputs", "STL_Decomposition", "Split_datagroups", "stldecomposition331.rds"))
@@ -699,7 +698,34 @@ trial_df<- trial_df %>% dplyr::select(-c(og_anisoEVI, int_anisoEVI, seasonal, re
 trial_df<- trial_df %>% mutate(Months= 1:nrow(trial_df))
 plot(trial_df$trend, type= "l")
 
-tic(); x<- class_trajectory_mod(trial_df$trend, trial_df$Months, trial_df); toc()
+tic(); x<- class_trajectory_mod (trial_df); toc()
+
+
+rds_list <- list.files(path = here("Outputs", "STL_Decomposition","Split_datagroups"), pattern='.rds$', all.files=TRUE, full.names=TRUE)
+rds_list<-gtools::mixedsort(rds_list) #arranging chronologically
+tic(); above_rds_list<-lapply(rds_list, read_rds); toc() #2 min 
+
+for (i in 1:length(above_rds_list)){
+  unique_cell<- above_rds_list[[i]] %>%
+    group_by(cell) %>% summarise(mean_value_og= mean(og_anisoEVI)); toc() #23 seconds!
+  unique_cell<- unique_cell %>% dplyr::select(cell)
+  print ("Unique cell ids from current .rds extracted")
+  classification_list<- list()
+  print ("Trajectory classification started")
+  tic(); for ( j in 1:dim(unique_cell)[1]){
+    trial_df<- above_rds_list[[i]] %>% filter(cell==unique_cell[[1]][j])
+    trial_df<- trial_df %>% dplyr::select(-c(og_anisoEVI, int_anisoEVI, seasonal, remainder))
+    trial_df<- trial_df %>% mutate(Months= 1:nrow(trial_df))
+    x<- class_trajectory_mod (trial_df)
+    print ("Trajectory classification completed")
+    classification_list[[i]]<- x
+    print (paste0("Cell id=", j, "/1000"))
+  }; toc()
+  write_rds(classification, here("Outputs", "Trajectory_Classification", "Classification_df", paste0("classification", i, ".rds")))
+  print ("Classification df list written out")
+}
+
+
 
 ```
 
